# raycast-scripts

./: justfile  pyproject.toml
raycast_scripts/: ask-chatgpt.sh  cli.py
