[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "raycast-scripts"
description = "Raycast Scripts"
authors = [{name = "Stephan Fitzpatrick", email = "knowsuchagency@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
version = "0.1.0"
dependencies = [
  "click~=8.1",
  "openai~=1.1",
]

[project.packages]
name = "raycast-scripts"
include = ["src"]

[project.scripts]
ask = "raycast_scripts.cli:ask"
